...
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/history_RCV_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingVertical="6dp"
            android:clipToPadding="false" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/history_LBL_empty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/history_empty"
            android:textColor="@color/text_secondary"
            android:textSize="16sp"
...
